[project]
name = "ahhunter"
version = "0.1.0"
description = "AHHunter is a script that helps with flipping items on the Hypixel Skyblock Auction House."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
]
